refactor: reimplement ExternalLink component using Pressable and improve code organization

--- a/package.json
+++ b/package.json
@@ -50,8 +50,12 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-config-universe": "^15.0.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
